--- a/paper/sections/experimental_details.tex
+++ b/paper/sections/experimental_details.tex
@@ -29,7 +29,7 @@ For the biggest architecture, full and per-layer ENGD lead to out-of-memory erro
 
 \begin{figure}[!h]
   \centering
-  \def\pathToFigs{../kfac_pinns_exp/exp17_groupplot_poisson2d}
+  \def\pathToFigs{kfac_pinns_exp/exp17_groupplot_poisson2d}
   \begin{subfigure}[t]{1.0\linewidth}
     \caption{}\label{subfig:poisson2d-time}
     % trim legend, xlabel and xticklabels
@@ -56,7 +56,7 @@ The runs shown in \Cref{fig:poisson2d-appendix} correspond to the following hype
 \begin{itemize}
 \item $2\to 64\to 1$ MLP with $D=257$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp09_reproduce_poisson2d/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp09_reproduce_poisson2d/tex}
   \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
@@ -69,7 +69,7 @@ The runs shown in \Cref{fig:poisson2d-appendix} correspond to the following hype
 
 \item $2 \to 64 \to 64 \to 48 \to 48 \to 1$ MLP with $D=\num{9873}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp15_poisson2d_deepwide/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp15_poisson2d_deepwide/tex}
   \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
@@ -82,7 +82,7 @@ The runs shown in \Cref{fig:poisson2d-appendix} correspond to the following hype
 
 \item $2 \to 256 \to 256\to 128 \to 128 \to 1$ MLP with $D=\num{116097}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp20_poisson2d_mlp_tanh_256/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp20_poisson2d_mlp_tanh_256/tex}
   \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
@@ -96,7 +96,7 @@ The runs shown in \Cref{fig:poisson2d-appendix} correspond to the following hype
 \begin{itemize}
 \item $2\to 64\to 1$ MLP with $D=257$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp09_reproduce_poisson2d/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp09_reproduce_poisson2d/tex}
   \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
@@ -109,7 +109,7 @@ The runs shown in \Cref{fig:poisson2d-appendix} correspond to the following hype
 
 \item $2 \to 64 \to 64 \to 48 \to 48 \to 1$ MLP with $D=\num{9873}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp15_poisson2d_deepwide/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp15_poisson2d_deepwide/tex}
   \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
@@ -122,7 +122,7 @@ The runs shown in \Cref{fig:poisson2d-appendix} correspond to the following hype
 
 \item $2 \to 256 \to 256\to 128 \to 128 \to 1$ MLP with $D=\num{116097}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp20_poisson2d_mlp_tanh_256/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp20_poisson2d_mlp_tanh_256/tex}
   \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
@@ -147,7 +147,7 @@ For the biggest architecture, full and layer-wise ENGD lead to out-of-memory err
 
 \begin{figure}[!h]
   \centering
-  \def\pathToFigs{../kfac_pinns_exp/exp18_groupplot_poisson5d}
+  \def\pathToFigs{kfac_pinns_exp/exp18_groupplot_poisson5d}
   \begin{subfigure}[t]{1.0\linewidth}
     \caption{}\label{subfig:poisson5d-time}
     % trim legend, xlabel and xticklabels
@@ -174,7 +174,7 @@ The runs shown in \Cref{fig:poisson5d-appendix} correspond to the following hype
 \begin{itemize}
 \item $5\to 64\to 1$ MLP with $D=449$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp10_reproduce_poisson5d/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp10_reproduce_poisson5d/tex}
   \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
@@ -187,7 +187,7 @@ The runs shown in \Cref{fig:poisson5d-appendix} correspond to the following hype
 
 \item $5 \to 64 \to 64 \to 48 \to 48 \to 1$ MLP with $D=\num{10065}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp16_poisson5d_deepwide/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp16_poisson5d_deepwide/tex}
   \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
@@ -200,7 +200,7 @@ The runs shown in \Cref{fig:poisson5d-appendix} correspond to the following hype
 
 \item $5 \to 256 \to 256\to 128 \to 128 \to 1$ MLP with $D=\num{116865}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp19_poisson5d_mlp_tanh_256/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp19_poisson5d_mlp_tanh_256/tex}
   \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
@@ -214,7 +214,7 @@ The runs shown in \Cref{fig:poisson5d-appendix} correspond to the following hype
 \begin{itemize}
 \item $5\to 64\to 1$ MLP with $D=449$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp10_reproduce_poisson5d/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp10_reproduce_poisson5d/tex}
   \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
@@ -227,7 +227,7 @@ The runs shown in \Cref{fig:poisson5d-appendix} correspond to the following hype
 
 \item $5 \to 64 \to 64 \to 48 \to 48 \to 1$ MLP with $D=\num{10065}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp16_poisson5d_deepwide/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp16_poisson5d_deepwide/tex}
   \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
@@ -240,7 +240,7 @@ The runs shown in \Cref{fig:poisson5d-appendix} correspond to the following hype
 
 \item $5 \to 256 \to 256\to 128 \to 128 \to 1$ MLP with $D=\num{116865}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp19_poisson5d_mlp_tanh_256/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp19_poisson5d_mlp_tanh_256/tex}
   \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
@@ -262,7 +262,7 @@ We use a $10 \to 256 \to 256\to 128 \to 128 \to 1$ MLP with $D=\num{118145}$ MLP
 
 \begin{figure}[!h]
   \centering
-  \def\pathToFigs{../kfac_pinns_exp/exp21_poisson_10d}
+  \def\pathToFigs{kfac_pinns_exp/exp21_poisson_10d}
   \begin{subfigure}[t]{1.0\linewidth}
     \caption{}\label{subfig:poisson_10d-time}
     \includegraphics{\pathToFigs/l2_error_over_time.pdf}
@@ -279,7 +279,7 @@ We use a $10 \to 256 \to 256\to 128 \to 128 \to 1$ MLP with $D=\num{118145}$ MLP
 \paragraph{Best run details}
 The runs shown in \Cref{fig:poisson_10d-appendix} correspond to the following hyper-parameters:
 \begin{itemize}
-  \def\pathToRuns{../kfac_pinns_exp/exp21_poisson_10d/tex/}
+  \def\pathToRuns{kfac_pinns_exp/exp21_poisson_10d/tex/}
 \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
 \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
 \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
@@ -290,7 +290,7 @@ The runs shown in \Cref{fig:poisson_10d-appendix} correspond to the following hy
 
 \paragraph{Search space details} The runs shown in \Cref{fig:poisson_10d-appendix} were determined to be the best via a Bayesian search on the following search spaces which each optimizer given approximately the same total computational time ($\mathcal{C}$ denotes a categorical, $\mathcal{U}$ a uniform, and $\mathcal{LU}$ a log-uniform distribution):
 \begin{itemize}
-  \def\pathToRuns{../kfac_pinns_exp/exp21_poisson_10d/tex/}
+  \def\pathToRuns{kfac_pinns_exp/exp21_poisson_10d/tex/}
 \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
 \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
 \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
@@ -319,7 +319,7 @@ These architectures are too large to be optimized by ENGD.
 
 \begin{figure}[!h]
   \centering
-  \def\pathToFigs{../kfac_pinns_exp/exp33_poisson_bayes_groupplot}
+  \def\pathToFigs{kfac_pinns_exp/exp33_poisson_bayes_groupplot}
   \begin{subfigure}[t]{1.0\linewidth}
     \caption{}\label{subfig:poisson-bayes-time}
     % trim legend, xlabel and xticklabels
@@ -346,7 +346,7 @@ These architectures are too large to be optimized by ENGD.
 
 \item 5d Poisson equation, $5 \to 256 \to 256 \to 128 \to 128 \to 1$ MLP with $D=\num{116865}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp26_poisson5d_mlp_tanh_256_bayes/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp26_poisson5d_mlp_tanh_256_bayes/tex}
   \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
@@ -357,7 +357,7 @@ These architectures are too large to be optimized by ENGD.
 
 \item 10d Poisson equation, $10 \to 256 \to 256 \to 128 \to 128 \to 1$ MLP with $D=\num{118145}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp32_poisson10d_mlp_tanh_256_bayes/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp32_poisson10d_mlp_tanh_256_bayes/tex}
   \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
@@ -368,7 +368,7 @@ These architectures are too large to be optimized by ENGD.
 
 \item 100d Poisson equation, $100 \to 768 \to 768 \to 512 \to 512 \to 1$ MLP with $D=\num{1325057}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp14_poisson_100d_weinan/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp14_poisson_100d_weinan/tex}
   \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
@@ -383,7 +383,7 @@ These architectures are too large to be optimized by ENGD.
 
 \item 5d Poisson equation, $5 \to 256 \to 256 \to 128 \to 128 \to 1$ MLP with $D=\num{116865}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp26_poisson5d_mlp_tanh_256_bayes/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp26_poisson5d_mlp_tanh_256_bayes/tex}
   \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
@@ -394,7 +394,7 @@ These architectures are too large to be optimized by ENGD.
 
 \item 10d Poisson equation, $10 \to 256 \to 256 \to 128 \to 128 \to 1$ MLP with $D=\num{118145}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp32_poisson10d_mlp_tanh_256_bayes/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp32_poisson10d_mlp_tanh_256_bayes/tex}
   \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
@@ -405,7 +405,7 @@ These architectures are too large to be optimized by ENGD.
 
 \item 100d Poisson equation, $100 \to 768 \to 768 \to 512 \to 512 \to 1$ MLP with $D=\num{1325057}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp14_poisson_100d_weinan/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp14_poisson_100d_weinan/tex}
   \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
@@ -455,7 +455,7 @@ The runs shown in \Cref{fig:heat1d-appendix} correspond to the following hyper-p
 \begin{itemize}
 \item $2\to 64\to 1$ MLP with $D=257$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp13_reproduce_heat1d/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp13_reproduce_heat1d/tex}
   \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
@@ -468,7 +468,7 @@ The runs shown in \Cref{fig:heat1d-appendix} correspond to the following hyper-p
 
 \item $2 \to 64 \to 64 \to 48 \to 48 \to 1$ MLP with $D=\num{9873}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp22_heat1d_mlp_tanh_64/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp22_heat1d_mlp_tanh_64/tex}
   \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
@@ -481,7 +481,7 @@ The runs shown in \Cref{fig:heat1d-appendix} correspond to the following hyper-p
 
 \item $2 \to 256 \to 256\to 128 \to 128 \to 1$ MLP with $D=\num{116097}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp23_heat1d_mlp_tanh_256/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp23_heat1d_mlp_tanh_256/tex}
   \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
@@ -496,7 +496,7 @@ The runs shown in \Cref{fig:heat1d-appendix} correspond to the following hyper-p
 \begin{itemize}
 \item $2\to 64\to 1$ MLP with $D=257$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp13_reproduce_heat1d/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp13_reproduce_heat1d/tex}
   \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
@@ -509,7 +509,7 @@ The runs shown in \Cref{fig:heat1d-appendix} correspond to the following hyper-p
 
 \item $2 \to 64 \to 64 \to 48 \to 48 \to 1$ MLP with $D=\num{9873}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp22_heat1d_mlp_tanh_64/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp22_heat1d_mlp_tanh_64/tex}
   \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
@@ -522,7 +522,7 @@ The runs shown in \Cref{fig:heat1d-appendix} correspond to the following hyper-p
 
 \item $2 \to 256 \to 256\to 128 \to 128 \to 1$ MLP with $D=\num{116097}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp23_heat1d_mlp_tanh_256/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp23_heat1d_mlp_tanh_256/tex}
   \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
@@ -548,7 +548,7 @@ For the biggest architecture, full and layer-wise ENGD lead to out-of-memory err
 
 \begin{figure}[!h]
   \centering
-  \def\pathToFigs{../kfac_pinns_exp/exp30_heat4d_groupplot}
+  \def\pathToFigs{kfac_pinns_exp/exp30_heat4d_groupplot}
   \begin{subfigure}[t]{1.0\linewidth}
     \caption{}\label{subfig:heat4d-time}
     % trim legend, xlabel and xticklabels
@@ -574,7 +574,7 @@ For the biggest architecture, full and layer-wise ENGD lead to out-of-memory err
 \begin{itemize}
 \item $5\to 64\to 1$ MLP with $D=449$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp27_heat4d_small/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp27_heat4d_small/tex}
   \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
@@ -587,7 +587,7 @@ For the biggest architecture, full and layer-wise ENGD lead to out-of-memory err
 
 \item $5 \to 64 \to 64 \to 48 \to 48 \to 1$ MLP with $D=\num{10065}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp28_heat4d_medium/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp28_heat4d_medium/tex}
   \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
@@ -600,7 +600,7 @@ For the biggest architecture, full and layer-wise ENGD lead to out-of-memory err
 
 \item $5 \to 256 \to 256\to 128 \to 128 \to 1$ MLP with $D=\num{116865}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp29_heat4d_big/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp29_heat4d_big/tex}
   \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
@@ -615,7 +615,7 @@ For the biggest architecture, full and layer-wise ENGD lead to out-of-memory err
 \begin{itemize}
 \item $5\to 64\to 1$ MLP with $D=449$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp27_heat4d_small/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp27_heat4d_small/tex}
   \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
@@ -628,7 +628,7 @@ For the biggest architecture, full and layer-wise ENGD lead to out-of-memory err
 
 \item $5 \to 64 \to 64 \to 48 \to 48 \to 1$ MLP with $D=\num{10065}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp28_heat4d_medium/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp28_heat4d_medium/tex}
   \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
@@ -641,7 +641,7 @@ For the biggest architecture, full and layer-wise ENGD lead to out-of-memory err
 
 \item $5 \to 256 \to 256\to 128 \to 128 \to 1$ MLP with $D=\num{116865}$
   \begin{itemize}
-    \def\pathToRuns{../kfac_pinns_exp/exp29_heat4d_big/tex}
+    \def\pathToRuns{kfac_pinns_exp/exp29_heat4d_big/tex}
   \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
   \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
   \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
@@ -659,7 +659,7 @@ We tune all optimizer hyper-parameters as described in \Cref{sec:tuning-protocol
 
 \begin{figure}[!h]
   \centering
-  \def\pathToFigs{../kfac_pinns_exp/exp31_heat4d_mlp_tanh_256_bayes}
+  \def\pathToFigs{kfac_pinns_exp/exp31_heat4d_mlp_tanh_256_bayes}
   \begin{subfigure}[t]{1.0\linewidth}
     \caption{}\label{subfig:heat4d-bayes-time}
     \includegraphics{\pathToFigs/l2_error_over_time.pdf}
@@ -676,7 +676,7 @@ We tune all optimizer hyper-parameters as described in \Cref{sec:tuning-protocol
 \paragraph{Best run details}
 The runs shown in \Cref{fig:heat4d-bayes-appendix} correspond to the following hyper-parameters:
 \begin{itemize}
-  \def\pathToRuns{../kfac_pinns_exp/exp31_heat4d_mlp_tanh_256_bayes/tex/}
+  \def\pathToRuns{kfac_pinns_exp/exp31_heat4d_mlp_tanh_256_bayes/tex/}
 \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
 \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
 \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
@@ -687,7 +687,7 @@ The runs shown in \Cref{fig:heat4d-bayes-appendix} correspond to the following h
 
 \paragraph{Search space details} The runs shown in \Cref{fig:heat4d-bayes-appendix} were determined to be the best via a Bayesian search on the following search spaces which each optimizer given approximately the same total computational time ($\mathcal{C}$ denotes a categorical, $\mathcal{U}$ a uniform, and $\mathcal{LU}$ a log-uniform distribution):
 \begin{itemize}
-  \def\pathToRuns{../kfac_pinns_exp/exp31_heat4d_mlp_tanh_256_bayes/tex/}
+  \def\pathToRuns{kfac_pinns_exp/exp31_heat4d_mlp_tanh_256_bayes/tex/}
 \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
 \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
 \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
