--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -1,6 +1,6 @@
 \begin{figure}[t]
   \centering
-  \includegraphics{../kfac_pinns_exp/exp17_groupplot_poisson2d/l2_error_over_time.pdf}
+  \includegraphics{kfac_pinns_exp/exp17_groupplot_poisson2d/l2_error_over_time.pdf}
   \caption{Performance of different optimizers on the 2d Poisson equation~\eqref{eq:2D-Poisson} measured in relative $L_2$ error against wall clock time for architectures with different parameter dimensions $D$.}
   \label{fig:2D-Poisson}
 \end{figure}
@@ -39,7 +39,7 @@ We make similar observations on a small (1+1)d heat equation with the same model
 
 \begin{figure}
   \centering
-  \includegraphics{../kfac_pinns_exp/exp30_heat4d_groupplot/l2_error_over_time.pdf}
+  \includegraphics{kfac_pinns_exp/exp30_heat4d_groupplot/l2_error_over_time.pdf}
   \caption{Performance of different optimizers on the (4+1)d heat equation~\eqref{eq:4D-heat} measured in relative $L^2$ error against wall clock time for architectures with different parameter dimensions $D$.}
   \label{fig:4D-heat}
 \end{figure}
@@ -76,7 +76,7 @@ We confirmed these observations with another 5d Poisson equation on the same arc
 
 \begin{figure}
   \centering
-  \includegraphics{../kfac_pinns_exp/exp33_poisson_bayes_groupplot/l2_error_over_time.pdf}
+  \includegraphics{kfac_pinns_exp/exp33_poisson_bayes_groupplot/l2_error_over_time.pdf}
   \caption{
     Optimizer performance on Poisson equations in high dimensions and different boundary conditions measured in relative $L_2$ error against wall clock time for networks with $D$ parameters.
   }
