--- a/paper/sections/acknowledgements.tex
+++ b/paper/sections/acknowledgements.tex
@@ -1,5 +1,6 @@
 \begin{ack} % automatically suppressed in anonymized submission
-  The authors thank Runa Eschenhagen for insightful discussions on the relation to KFAC for weight sharing layers.
+  The authors thank Runa Eschenhagen for insightful discussions on KFAC for linear weight sharing layers.
+  Resources used in preparing this research were provided, in part, by the Province of Ontario, the Government of Canada through CIFAR, and companies sponsoring Vector Institute.
 \end{ack}
 %%% Local Variables:
 %%% mode: latex
