Update on Overleaf.

--- a/paper/preamble/metadata.tex
+++ b/paper/preamble/metadata.tex
@@ -19,15 +19,14 @@
   \texttt{fdangel@vectorinstitute.ai} \\
   \And
   Johannes M\"uller$^*$\\
-  Department of Mathematics \\
+  Chair of Mathematics of Information Processing \\
   RWTH Aachen University \\
   Aachen, Germany \\
   \texttt{mueller@mathc.rwth-aachen.de} \\
   \And
   Marius Zeinhofer$^*$\\
-  University Hospital \\
-  University of Freiburg \\
-  Freiburg, Germany \\
+  Simula Research Laboratory \\
+  Oslo, Norway \\
   \texttt{mariusz@simula.no}
 }
 %%% Local Variables:
