--- a/paper/sections/contribution.tex
+++ b/paper/sections/contribution.tex
@@ -110,7 +110,7 @@ $\mZ_n^{(l)} \in \sR^{h^{(l)} \times S}$ with $S = d+2$ and columns $\mZ_{n, 1}^
     \otimes
     \underbrace{\jac_{\mZ^{(l)}_{n,s}} \Delta_{\vx}u_n}_{\eqqcolon \vg_{n,s}^{(l)} \in \sR^{h^{(l)}}}\,,
 \end{align*}
-which has similar structure than the Jacobian in \Cref{sec:kfac-background}, but with an additional sum over the $S$ shared vectors. With that, we can now express the exact interior Gramian for a layer as
+which has a structure similar to the Jacobian in \Cref{sec:kfac-background}, but with an additional sum over the $S$ shared vectors. With that, we can now express the exact interior Gramian for a layer as
 \begin{equation}\label{eq:laplace_gramian_block_exact}
   \mG^{(l)}_\Omega(\vtheta)
   =
