Update on Overleaf.

--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -36,6 +36,9 @@
 \section{Taylor-Mode Automatic Differentiation \& Forward Laplacian}\label{app:taylor-mode-tutorial}
 \input{sections/taylor_mode_forward_laplacian.tex}
 
+\section{Fokker-Planck}\label{app:fokker-planck}
+\input{paper/sections/fokker_planck}
+
 %\section{Derivation of KFAC general PDEs}\label{app:generalPDEs}
 %\input{paper/sections/general_PDEs}
 
