--- a/paper/sections/contribution.tex
+++ b/paper/sections/contribution.tex
@@ -80,6 +80,19 @@ This reduces computational cost, but is restricted to PDEs that involve second-o
 For a more general second-order linear PDE operator $\gL = \sum_{i,j=1}^d c_{i,j} \partial^2_{\evx_i,\evx_j}$, the forward pass for a linear layer is $\mathcal{L} \vz^{(l)} = \mW^{(l)}\mathcal{L} \vz^{(l-1)} \in \sR^{h^{(l)}}$, generalizing~\eqref{eq:forward_Laplacian_linear}, and similarly for~\Cref{eq:forward_Laplacian_nonlinear}.
 This is similar to \cite{li2024dof}, which transforms the input space using an eigen-decomposition of $c_{i,j}$ to a basis where it is diagonal with entries $\{0, \pm 1\}$, reducing the computation to two forward Laplacians.
 
+\todo[inline]{
+For the nonlinear layers with component-wise activation we obtain 
+\begin{align*}
+    \mathcal{L}\vz^{(l)}
+    &=
+      \sigma'(\vz^{(l-1)})\odot\mathcal{L}\vz^{(l-1)}
+      +
+      \textstyle
+      \sum_{i,j=1}^d c_{ij} \sigma''(\vz^{(l-1)})\odot \partial_{x_i}{\vz^{(l-1)}}\odot \partial_{x_j}{\vz^{(l-1)}}
+      \quad \in \sR^{h^{(l)}}\,.
+\end{align*}
+}
+
 Importantly, the computation of higher-order derivatives for linear layers boils down to a forward pass through the layer with weight sharing over the different partial derivatives (\Cref{eq:forward_pass}), and weight sharing can potentially be reduced depending on the differential operator's structure (\Cref{eq:forward_Laplacian_linear}).
 Therefore, we can use the concept of KFAC in the presence of weight sharing to derive a principled Kronecker approximation for Gramians containing differential operator terms.
 
